# isgermanyclean

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: uwsgi.ini
src/isgermanyclean/: __init__.py  args.py  compare.py  download.py  intensity.py  plot.py  report.py  utils.py  web.py
src/isgermanyclean/static/: style.sass
src/isgermanyclean/templates/: index.html  index.html.jinja
src/sql/: schema.sql
systemd/user/: isgermanyclean-hourly.timer  isgermanyclean-web.service  isgermanyclean.service
