[build-system]

requires = [
    "setuptools >= 42",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
method = "git"

[project]
name = "isgermanyclean"
dynamic = ["version"]
authors = [
  { name="Siegfried Kircheis", email="kircheis.siegfried@proton.me" },
]
description = "Is Germany cleaner than France today?"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
isgermanyclean = "isgermanyclean:main"

[project.urls]
"Homepage" = "https://github.com/skircheis/isgermanyclean"
"Bug Tracker" = "https://github.com/skircheis/isgermanyclean/issues"
